fix image issue not showing on vercel app

--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -15,7 +15,7 @@
 
 .nav__menu {
 	width: 45vw;
-	padding: 5px 20px;
+	padding: 5px 25px;
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
